Get rid of the HTML bundle

--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -6,4 +6,4 @@
   </svg>
 </drawing-board>
 
-<link rel="import" href="../../dist/drawing-board.html" />
+<script src="../../dist/drawingBoard.js"></script>
