Add the plugin `viewport`

--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -1,6 +1,9 @@
 <!doctype html>
 
-<drawing-board scale="0.75">
+<drawing-board
+  scale="0.75"
+  viewport="800 × 400"
+  >
   <svg>
     <circle r="50" />
   </svg>
