--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -4,8 +4,8 @@
   scale="0.75"
   viewport="800 × 400"
   >
-  <svg>
-    <circle r="50" />
+  <svg x="200" y="30">
+    <circle r="50" cx="20" />
   </svg>
 </drawing-board>
 
