Add autoregister plugin

--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -1,5 +1,10 @@
 <!doctype html>
 
+<script src="../../dist/drawingBoard.core.js"></script>
+<script src="../../dist/drawingBoard.scale.js"></script>
+<script src="../../dist/drawingBoard.viewport.js"></script>
+<script src="../../dist/drawingBoard.autoregister.js"></script>
+
 <drawing-board
   scale="0.75"
   viewport="800 × 400"
@@ -8,5 +13,3 @@
     <circle r="50" cx="20" />
   </svg>
 </drawing-board>
-
-<script src="../../dist/drawingBoard.js"></script>
