Add plugin `target`

--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -2,14 +2,16 @@
 
 <script src="../../dist/drawingBoard.core.js"></script>
 <script src="../../dist/drawingBoard.scale.js"></script>
+<script src="../../dist/drawingBoard.target.js"></script>
 <script src="../../dist/drawingBoard.viewport.js"></script>
 <script src="../../dist/drawingBoard.autoregister.js"></script>
 
 <drawing-board
   scale="0.75"
   viewport="800 × 400"
+  target="250, 80"
   >
   <svg x="200" y="30">
-    <circle r="50" cx="20" />
+    <circle r="50" cx="50" cy="50" />
   </svg>
 </drawing-board>
