--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -1,12 +1,11 @@
 <!doctype html>
 
-<script src="../../dist/drawingBoard.core.js"></script>
-<script src="../../dist/drawingBoard.scale.js"></script>
-<script src="../../dist/drawingBoard.target.js"></script>
-<script src="../../dist/drawingBoard.viewport.js"></script>
-<script src="../../dist/drawingBoard.autoregister.js"></script>
+<script src="../../dist/interactive-svg.scale.js"></script>
+<script src="../../dist/interactive-svg.target.js"></script>
+<script src="../../dist/interactive-svg.viewport.js"></script>
+<script src="../../dist/interactive-svg.register.js"></script>
 
-<drawing-board
+<interactive-svg
   scale="0.75"
   viewport="800 × 400"
   target="250, 80"
@@ -14,4 +13,4 @@
   <svg x="200" y="30">
     <circle r="50" cx="50" cy="50" />
   </svg>
-</drawing-board>
+</interactive-svg>
